--- a/assignment-9/index.html
+++ b/assignment-9/index.html
@@ -7,11 +7,6 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a
-      href="https://github.com/abarna-codespot/A-simple-Calculator"
-      target="blank"
-      >link to calculator project</a
-    >
     <div id="container">
       <p id="first"></p>
       <div id="calculator">
@@ -27,7 +22,7 @@
           <button onclick="clearEvent()" class="operator" id="clear">C</button>
           <button class="empty" id="empty"></button>
           <button class="empty" id="empty"></button>
-          <button onclick="operatorEvent('/')" class="operator" id="/">
+          <button onclick="clickEvent('/')" class="operator" id="/">
             &#247;
           </button>
           <button onclick="clickEvent(7)" class="number" id="7">7</button>
