--- a/assignment-11/index.html
+++ b/assignment-11/index.html
@@ -15,7 +15,7 @@
         <input type="text" id="title" placeholder="Title..." />
         <input type="text" id="desc" placeholder="Description..." />
         <input type="date" id="due" placeholder="Due date..." />
-
+        <button id="update" class="btn hide" onclick="update()">Update</button>
         <button id="addTask" onclick="addTask()" class="btn">Add Task</button>
         <button id="clear" onclick="clearFields()" class="btn">Clear</button
         ><br /><br />
