--- a/assignment-15/index.html
+++ b/assignment-15/index.html
@@ -7,6 +7,7 @@
     <title>Assignment 15</title>
   </head>
   <body>
+    <h1>Output is in Console</h1>
     <script src="script.js"></script>
   </body>
 </html>
